--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <!-- 
+    Site Created by adamhell and themoat
+    
     Free Responsive Template by templatemo
     http://www.templatemo.com
 -->
